--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "microbundle --inline none --external @babel/types --format cjs --no-compress src/*.js",
     "prepack": "npm run build",
+    "prepare": "npm run build",
     "dev": "jest --verbose --watchAll",
     "test": "npm run build && jest --verbose",
     "release": "npm t && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
